# craft

./: Cargo.toml  README.md
assets/shaders/: terrain.wgsl
src/: camera.rs  chunk.rs  game.rs  main.rs  noise.rs
src/renderer/: block.rs  buffer.rs  mod.rs  renderer.rs  texture.rs
