[package]
name = "craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "23.0.0", features = ["glsl"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
winit = "0.29"
image = { version = "0.24.0", features = ["png", "jpeg"] }
anyhow = "1.0.95"
cgmath = "0.18.0"
noise = "0.9.0"
rand = "0.8.5"
